--- a/ios/MigrationsverketNotification/Base.lproj/LaunchScreen.xib
+++ b/ios/MigrationsverketNotification/Base.lproj/LaunchScreen.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="ipad12_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -12,24 +12,26 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="643" height="670"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Qdi-HU-dZ0">
-                    <rect key="frame" x="120" y="81" width="240" height="289"/>
+                <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qdi-HU-dZ0">
+                    <rect key="frame" x="171.5" y="185" width="300" height="300"/>
                     <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="300" id="Qfa-J2-2P0"/>
+                        <constraint firstAttribute="height" constant="300" id="eBY-e0-YLV"/>
+                    </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="0.73984330892562866" green="0.15181300044059753" blue="0.25092098116874695" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
-                <constraint firstItem="Qdi-HU-dZ0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="UHk-VG-XsN"/>
-                <constraint firstItem="Qdi-HU-dZ0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="cJh-3K-Rsk"/>
-                <constraint firstAttribute="trailing" secondItem="Qdi-HU-dZ0" secondAttribute="trailing" id="gBg-x6-ZqQ"/>
-                <constraint firstAttribute="bottom" secondItem="Qdi-HU-dZ0" secondAttribute="bottom" id="mHp-N6-4FH"/>
+                <constraint firstItem="Qdi-HU-dZ0" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="TzF-Zd-TUZ"/>
+                <constraint firstItem="Qdi-HU-dZ0" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="ZxU-nK-nWM"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="547.20000000000005" y="454.27286356821594"/>
+            <point key="canvasLocation" x="463.76953124999994" y="506.00292825768662"/>
         </view>
     </objects>
     <resources>
